DT-2417 - Moved mobile overflow fix into a media query

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -184,9 +184,11 @@
 
 html,
 body {
-    overflow-y: scroll;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
-    -webkit-overflow-scrolling: touch;
+    @media @tablet-860px {
+        overflow-y: scroll;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+        -webkit-overflow-scrolling: touch;
+    }
 }
 
 
